kubernetes_DevOps/k8s/fastApi_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
  selector:
    app: fastapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  selector:
    matchLabels:
      app: fastapi
  replicas: 3
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: f3lin/mytestapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
