kubernetes_DevOps/k8s/postgreSQL_stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:12.0-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data  # Changed from "postgres-data" to "db-data"
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data  # Ensure this name matches the volumeMount name
          persistentVolumeClaim:
            claimName: pvc-datascientest

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
  selector:
    app: db
