kubernetes_DevOps/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: exam-tls-secret
      hosts:
        - pgadmin.mk8s.gleeze.com
        - fastapi.mk8s.gleeze.com
  rules:
  - host: pgadmin.mk8s.gleeze.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  - host: fastapi.mk8s.gleeze.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
